update docs since now LLM API keys are not required

--- a/examples/hello-kernel-world/colab_notebook_walkthrough.ipynb
+++ b/examples/hello-kernel-world/colab_notebook_walkthrough.ipynb
@@ -1,32 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Hello Kernel World 🔥"
-      ],
       "metadata": {
         "id": "RO1o5fS5W8xc"
-      }
+      },
+      "source": [
+        "# Hello Kernel World 🔥"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "yorBWlqGuC7-"
+      },
       "source": [
         "<p align=\"left\">\n",
         "  <img src=\"https://raw.githubusercontent.com/WecoAI/weco-cli/main/assets/example-optimization.gif\"\n",
@@ -38,22 +25,24 @@
         "\n",
         "- 📖 [CLI Reference](https://docs.weco.ai/cli/cli-reference) - Explore our docs for an in-depth look at what the tool can do\n",
         "- ✨ [Examples](https://docs.weco.ai/examples) - Explore automated R&D across kernel engineering, ML engineering and prompt engineering"
-      ],
-      "metadata": {
-        "id": "yorBWlqGuC7-"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Setup Dependencies"
-      ],
       "metadata": {
         "id": "5BQGGqbJW2Eq"
-      }
+      },
+      "source": [
+        "## Setup Dependencies"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "89doT3fbWcGi"
+      },
+      "outputs": [],
       "source": [
         "# Install requirements\n",
         "%pip install -q weco ipywidgets numpy torch\n",
@@ -61,24 +50,24 @@
         "# Enable custom widgets\n",
         "from google.colab import output\n",
         "output.enable_custom_widget_manager()"
-      ],
-      "metadata": {
-        "id": "89doT3fbWcGi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Now we need to determine what `DEVICE` we can run this on, a CPU or GPU..."
-      ],
       "metadata": {
         "id": "gYxLwOXzfmiF"
-      }
+      },
+      "source": [
+        "Now we need to determine what `DEVICE` we can run this on, a CPU or GPU..."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PFAn_bzAXLGO"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "from rich import print as rprint\n",
@@ -101,78 +90,36 @@
         "else:\n",
         "    DEVICE = \"cuda\"\n",
         "    rprint(\"[bold green]✅ GPU is enabled.[/bold green] Proceeding with [bold green]CUDA[/bold green]...\")"
-      ],
-      "metadata": {
-        "id": "PFAn_bzAXLGO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dFGClqxpzwyM"
+      },
+      "outputs": [],
       "source": [
         "# Download the example files from CLI repo\n",
         "!wget https://github.com/WecoAI/weco-cli/archive/refs/heads/main.zip -O repo.zip\n",
         "!unzip -j repo.zip \"weco-cli-main/examples/hello-kernel-world/*\" -d .\n",
         "!rm repo.zip"
-      ],
-      "metadata": {
-        "id": "dFGClqxpzwyM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Google AI Studio has a free API usage quota. Create a key [here](https://aistudio.google.com/apikey) to use `weco` for free!"
-      ],
-      "metadata": {
-        "id": "PGlEsI78bMtN"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "# Pass your API key below\n",
-        "os.environ[\"GEMINI_API_KEY\"] = \"\"\n",
-        "# os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
-        "# os.environ[\"ANTHROPIC_API_KEY\"] = \"\"\n",
-        "\n",
-        "\n",
-        "if not any([os.environ.get(key) for key in [\"GEMINI_API_KEY\", \"OPENAI_API_KEY\", \"ANTHROPIC_API_KEY\"]]):\n",
-        "    rprint(\n",
-        "\"[bold red]❌ No API keys found.[/bold red]\\n\"\n",
-        "\"\\n\"\n",
-        "\"Please set one of the following environment variables:\\n\"\n",
-        "\"  • [cyan]GEMINI_API_KEY[/cyan]\\n\"\n",
-        "\"  • [cyan]OPENAI_API_KEY[/cyan]\\n\"\n",
-        "\"  • [cyan]ANTHROPIC_API_KEY[/cyan]\\n\"\n",
-        "\"\\n\"\n",
-        "\"Setup your [cyan]GEMINI_API_KEY[/cyan] for free - [underline white]https://aistudio.google.com/apikey[/underline white] !\"\n",
-        "    )\n",
-        "else:\n",
-        "    rprint(\"[bold green]✅ API keys found.[/bold green]\\n\\nWe'll only be able to know if they are correct once the optimization starts.\")"
-      ],
-      "metadata": {
-        "id": "b4XuOeNzYTdp"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Let's Start Optimizing!"
-      ],
       "metadata": {
         "id": "sbvA8oQceOt5"
-      }
+      },
+      "source": [
+        "## Let's Start Optimizing!"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4OjXTBkjc4Id"
+      },
       "source": [
         "Now that we've got our dependecies, GPU and LLM API key sorted out, let's take a look at what code we're optimizing!\n",
         "\n",
@@ -181,13 +128,15 @@
         "2. A snippet of code we'd like to optimize (`optimize.py`)\n",
         "\n",
         "Let's take a look at what the code we want to optimize looks like..."
-      ],
-      "metadata": {
-        "id": "4OjXTBkjc4Id"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rUTxqxWgcC34"
+      },
+      "outputs": [],
       "source": [
         "from IPython.display import display, HTML\n",
         "from pygments import highlight\n",
@@ -199,24 +148,22 @@
         "        display(HTML(highlight(f.read(), PythonLexer(), HtmlFormatter(full=True, style=\"monokai\"))))\n",
         "\n",
         "view_code_block(\"optimize.py\")"
-      ],
-      "metadata": {
-        "id": "rUTxqxWgcC34"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Real-world code is often more complex but this is a good place to start. You can find more advanced examples [here](https://docs.weco.ai/examples), however, we'd recommend starting with this notebook as the optimization setup is the exact same, no matter the complexity!"
-      ],
       "metadata": {
         "id": "5C5dvasXdmNw"
-      }
+      },
+      "source": [
+        "Real-world code is often more complex but this is a good place to start. You can find more advanced examples [here](https://docs.weco.ai/examples), however, we'd recommend starting with this notebook as the optimization setup is the exact same, no matter the complexity!"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "YfDg-pP9fAdC"
+      },
       "source": [
         "It's simple to start optimizing any piece of code! You just need to set:\n",
         "1. Path to source code - we can point this to our `optimize.py`\n",
@@ -225,24 +172,26 @@
         "4. Whether you want to maximize or minimize the metric you mentioned above - in our case, we want to make this code faster!\n",
         "5. Number of steps to optimize for - we'll keep it low to avoid any rate limits being hit on your free Gemini API key\n",
         "6. Additional context - anything information you think should guide the optimization process"
-      ],
-      "metadata": {
-        "id": "YfDg-pP9fAdC"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "TbG_3nwEhs5G"
+      },
       "source": [
         "Now let's get straight into it. Keep an eye on the `Best Solution` panel!\n",
         "\n",
         "Note that you can track the optimization in the logs directory (`.runs/`) and on our dashboard (links shown in the `Summary` panel)."
-      ],
-      "metadata": {
-        "id": "TbG_3nwEhs5G"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "17YZ2euZplDJ"
+      },
+      "outputs": [],
       "source": [
         "import sys, weco.cli as weco_cli\n",
         "\n",
@@ -266,45 +215,56 @@
         "\n",
         "try: weco_cli.main()\n",
         "except SystemExit: pass"
-      ],
-      "metadata": {
-        "id": "17YZ2euZplDJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's take a look at what our optimized code looks like (`optimize.py`)!"
-      ],
       "metadata": {
         "id": "990ueX_JsO_1"
-      }
+      },
+      "source": [
+        "Let's take a look at what our optimized code looks like (`optimize.py`)!"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "view_code_block(\"optimize.py\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9dqfzXkajQKs"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "view_code_block(\"optimize.py\")"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "17oICow9yjn8"
+      },
       "source": [
         "Happy Optimizing from the [Weco](https://www.weco.ai/) Team!\n",
         "\n",
         "If you'd like to learn more about what Weco can do, here are some spots to check out:\n",
         "- 📖 [CLI Reference](https://docs.weco.ai/cli/cli-reference) - Explore our docs for an in-depth look at what the tool can do\n",
         "- ✨ [Examples](https://docs.weco.ai/examples) - Explore automated R&D across kernel engineering, ML engineering and prompt engineering"
-      ],
-      "metadata": {
-        "id": "17oICow9yjn8"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
