Update hello-kernel-world notebook to reference kernel.py instead of optimize.py
- Changed all instances of `optimize.py` to `kernel.py` in the colab notebook for consistency with recent refactor.
- Updated related comments and code blocks to reflect the new file name.

--- a/examples/hello-kernel-world/colab_notebook_walkthrough.ipynb
+++ b/examples/hello-kernel-world/colab_notebook_walkthrough.ipynb
@@ -125,7 +125,7 @@
         "\n",
         "Earlier, we downloaded two files:\n",
         "1. An evaluation script to help score *how good a solution is* (`evaluate.py`)\n",
-        "2. A snippet of code we'd like to optimize (`optimize.py`)\n",
+        "2. A snippet of code we'd like to optimize (`kernel.py`)\n",
         "\n",
         "Let's take a look at what the code we want to optimize looks like..."
       ]
@@ -147,7 +147,7 @@
         "    with open(path) as f:\n",
         "        display(HTML(highlight(f.read(), PythonLexer(), HtmlFormatter(full=True, style=\"monokai\"))))\n",
         "\n",
-        "view_code_block(\"optimize.py\")"
+        "view_code_block(\"kernel.py\")"
       ]
     },
     {
@@ -166,7 +166,7 @@
       },
       "source": [
         "It's simple to start optimizing any piece of code! You just need to set:\n",
-        "1. Path to source code - we can point this to our `optimize.py`\n",
+        "1. Path to source code - we can point this to our `kernel.py`\n",
         "2. Command to run evaluation - notice how we are using the `DEVICE` we setup earlier\n",
         "3. The metric we are optimizing for - in this case, the evaluation script (`evaluate.py`) prints the `'speedup'` achieved to the terminal\n",
         "4. Whether you want to maximize or minimize the metric you mentioned above - in our case, we want to make this code faster!\n",
@@ -196,8 +196,8 @@
         "import sys, weco.cli as weco_cli\n",
         "\n",
         "# When running in a terminal, you can use this instead:\n",
-        "# weco run --source optimize.py \\\n",
-        "#      --eval-command f\"python evaluate.py --solution-path optimize.py --device {DEVICE}\" \\\n",
+        "# weco run --source kernel.py \\\n",
+        "#      --eval-command f\"python evaluate.py --path kernel.py --device {DEVICE}\" \\\n",
         "#      --metric speedup \\\n",
         "#      --goal maximize \\\n",
         "#      --steps 10 \\\n",
@@ -205,8 +205,8 @@
         "\n",
         "sys.argv = [\n",
         "    \"weco\", \"run\",\n",
-        "    \"--source\", \"optimize.py\",\n",
-        "    \"--eval-command\", f\"python evaluate.py --solution-path optimize.py --device {DEVICE}\",\n",
+        "    \"--source\", \"kernel.py\",\n",
+        "    \"--eval-command\", f\"python evaluate.py --path kernel.py --device {DEVICE}\",\n",
         "    \"--metric\", \"speedup\",\n",
         "    \"--goal\", \"maximize\",\n",
         "    \"--steps\", \"10\",\n",
@@ -223,7 +223,7 @@
         "id": "990ueX_JsO_1"
       },
       "source": [
-        "Let's take a look at what our optimized code looks like (`optimize.py`)!"
+        "Let's take a look at what our optimized code looks like (`kernel.py`)!"
       ]
     },
     {
@@ -234,7 +234,7 @@
       },
       "outputs": [],
       "source": [
-        "view_code_block(\"optimize.py\")"
+        "view_code_block(\"kernel.py\")"
       ]
     },
     {
