Update hello-world example to reflect changes in file naming and content
- Rename references from `kernel.py` to `module.py` in the hello-world example files.
- Update README and Colab notebook to reflect the new example name "Hello World".
- Adjust descriptions to better represent the example's focus on optimizing ML models.

--- a/examples/hello-world/colab_notebook_walkthrough.ipynb
+++ b/examples/hello-world/colab_notebook_walkthrough.ipynb
@@ -6,7 +6,7 @@
     "id": "RO1o5fS5W8xc"
    },
    "source": [
-    "# Hello Kernel World 🔥"
+    "# Hello World 🔥"
    ]
   },
   {
@@ -99,7 +99,12 @@
     "id": "dFGClqxpzwyM"
    },
    "outputs": [],
-   "source": "# Download the example files from CLI repo\n!wget https://github.com/WecoAI/weco-cli/archive/refs/heads/main.zip -O repo.zip\n!unzip -j repo.zip \"weco-cli-main/examples/hello-world/*\" -d .\n!rm repo.zip"
+   "source": [
+    "# Download the example files from CLI repo\n",
+    "!wget https://github.com/WecoAI/weco-cli/archive/refs/heads/main.zip -O repo.zip\n",
+    "!unzip -j repo.zip \"weco-cli-main/examples/hello-world/*\" -d .\n",
+    "!rm repo.zip"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +125,7 @@
     "\n",
     "Earlier, we downloaded two files:\n",
     "1. An evaluation script to help score *how good a solution is* (`evaluate.py`)\n",
-    "2. A snippet of code we'd like to optimize (`kernel.py`)\n",
+    "2. A snippet of code we'd like to optimize (`module.py`)\n",
     "\n",
     "Let's take a look at what the code we want to optimize looks like..."
    ]
@@ -142,7 +147,7 @@
     "    with open(path) as f:\n",
     "        display(HTML(highlight(f.read(), PythonLexer(), HtmlFormatter(full=True, style=\"monokai\"))))\n",
     "\n",
-    "view_code_block(\"kernel.py\")"
+    "view_code_block(\"module.py\")"
    ]
   },
   {
@@ -161,7 +166,7 @@
    },
    "source": [
     "It's simple to start optimizing any piece of code! You just need to set:\n",
-    "1. Path to source code - we can point this to our `kernel.py`\n",
+    "1. Path to source code - we can point this to our `module.py`\n",
     "2. Command to run evaluation - notice how we are using the `DEVICE` we setup earlier\n",
     "3. The metric we are optimizing for - in this case, the evaluation script (`evaluate.py`) prints the `'speedup'` achieved to the terminal\n",
     "4. Whether you want to maximize or minimize the metric you mentioned above - in our case, we want to make this code faster!\n",
@@ -191,8 +196,8 @@
     "import sys, weco.cli as weco_cli\n",
     "\n",
     "# When running in a terminal, you can use this instead:\n",
-    "# weco run --source kernel.py \\\n",
-    "#      --eval-command f\"python evaluate.py --path kernel.py --device {DEVICE}\" \\\n",
+    "# weco run --source module.py \\\n",
+    "#      --eval-command f\"python evaluate.py --path module.py --device {DEVICE}\" \\\n",
     "#      --metric speedup \\\n",
     "#      --goal maximize \\\n",
     "#      --steps 10 \\\n",
@@ -200,8 +205,8 @@
     "\n",
     "sys.argv = [\n",
     "    \"weco\", \"run\",\n",
-    "    \"--source\", \"kernel.py\",\n",
-    "    \"--eval-command\", f\"python evaluate.py --path kernel.py --device {DEVICE}\",\n",
+    "    \"--source\", \"module.py\",\n",
+    "    \"--eval-command\", f\"python evaluate.py --path module.py --device {DEVICE}\",\n",
     "    \"--metric\", \"speedup\",\n",
     "    \"--goal\", \"maximize\",\n",
     "    \"--steps\", \"10\",\n",
@@ -218,8 +223,15 @@
     "id": "990ueX_JsO_1"
    },
    "source": [
-    "Let's take a look at what our optimized code looks like (`kernel.py`)!"
+    "Let's take a look at what our optimized code looks like (`module.py`)!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -229,7 +241,7 @@
    },
    "outputs": [],
    "source": [
-    "view_code_block(\"kernel.py\")"
+    "view_code_block(\"module.py\")"
    ]
   },
   {
